# cmakelist-playground

./: CMakeLists.txt  README.md  tutorial.m.cpp
MathStuff/: CMakeLists.txt  math.cpp  math.h
